WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46865
WebCore::ESpeak causes missing symbol with no ENABLE_SVG
https://bugs.webkit.org/show_bug.cgi?id=46865
Summary
WebCore::ESpeak causes missing symbol with no ENABLE_SVG
Hajime Morrita
Reported
2010-09-29 18:46:37 PDT
From error output: out/Release/obj.target/third_party/WebKit/WebCore/WebCore.gyp/libwebcore_remaining.a(CSSStyleSelector.o): In function `WebCore::CSSStyleSelector::applyProperty(int, WebCore::CSSValue*)': /b/slave/chromium-rel-linux-valgrind-builder/build/src/third_party/WebKit/WebCore/css/CSSStyleSelector.cpp:5489: undefined reference to `WebCore::CSSPrimitiveValue::operator WebCore::ESpeak<WebCore::ESpeak>() const' out/Release/obj.target/third_party/WebKit/WebCore/WebCore.gyp/libwebcore_remaining.a(CSSComputedStyleDeclaration.o): In function `WTF::PassRefPtr<WebCore::CSSPrimitiveValue> WebCore::CSSPrimitiveValue::create<WebCore::ESpeak>(WebCore::ESpeak)': /b/slave/chromium-rel-linux-valgrind-builder/build/src/third_party/WebKit/WebCore/css/CSSPrimitiveValue.h:107: undefined reference to `WebCore::CSSPrimitiveValue::CSSPrimitiveValue<WebCore::ESpeak>(WebCore::ESpeak)' Seems introduced at
http://trac.webkit.org/changeset/68680
. A patch will come shortly.
Attachments
Patch
(3.79 KB, patch)
2010-09-29 19:24 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-09-29 19:24:51 PDT
Created
attachment 69296
[details]
Patch
Hajime Morrita
Comment 2
2010-09-29 19:34:19 PDT
Committed
r68738
: <
http://trac.webkit.org/changeset/68738
>
chris fleizach
Comment 3
2010-09-29 19:36:10 PDT
Comment on
attachment 69296
[details]
Patch R=me Thanks
WebKit Review Bot
Comment 4
2010-09-29 20:42:51 PDT
http://trac.webkit.org/changeset/68738
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug