2010-09-29  MORITA Hajime  <morrita@google.com>

Unreviewed build fix.

        WebCore::ESpeak causes missing symbol with no ENABLE_SVG
        https://bugs.webkit.org/show_bug.cgi?id=46865

        Moves ESpeak related function definitions outside ENABLE_SVG block.

        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator ESpeak):
        (WebCore::CSSPrimitiveValue::operator EVectorEffect):

Canonical link: https://commits.webkit.org/59370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68738 268f45cc-cd09-0410-ab3c-d52691b4dbfc